# bnn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
config/: main.yaml
config/W_optimizer/: ExpectationSGD.yaml  ModalSGD.yaml
config/b_optimizer/: Adam.yaml
config/data/: target_net.yaml
config/dataset/: fashion_mnist.yaml  fashion_mnist01.yaml  mnist.yaml  target_net.yaml
config/loss/: CE.yaml  l1.yaml  l2.yaml
config/network/: TBNN.yaml  TBNN_mnist.yaml  TBNN_mnist_larger.yaml  TBNN_sign.yaml
config/optimizer/: ExpectationSGD.yaml
config/scheduler/: CosineAnnealingLR.yaml  MultiplicativeLR.yaml  noop.yaml
envs/: Dockerfile  environment.yaml  requirements.txt  requirements_dev.txt
notebooks/: FashionMNIST.ipynb  MNIST.ipynb  autograd.ipynb  bernoulli.ipynb  dataloader.ipynb  gradient_sign.ipynb  int_matmul.ipynb  load_checkpoint.ipynb  results.ipynb  sandbox_1.ipynb  sandbox_var.ipynb
scripts/: bnn.code-workspace  environment.yml  perma_run.out  perma_run.sh  test_wandb.py  train.py  train_classification.py  train_classification_broken.py
scripts/config/: main.yaml
src/bnn/: __init__.py  __main__.py  compress.py  config.py  functions.py  layer.py  loss.py  metrics.py  network.py  optimizer.py  random.py  save.py  scheduler.py  type.py  utils.py
src/bnn/data/: __init__.py  all_unary_functions.py  data_loader.py  fashion_mnist.py  mnist.py  target_network.py
src/bnn/functions/: __init__.py  backward.py  forward.py  functions.py
src/bnn/optimizer/: __init__.py  deterministic.py  expectation.py
tests/: __init__.py  test_functions.py  test_layer.py  test_loss.py  test_random.py
tests/integration/: test_network.py
